[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Prefabs/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://art_assets/audio/music/sdow_mx_pause_loop.wav" type="AudioStream" id=2]

[sub_resource type="DynamicFontData" id=7]
antialiased = false
font_path = "res://art_assets/press-start.regular.ttf"

[sub_resource type="DynamicFont" id=8]
size = 29
font_data = SubResource( 7 )

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFontData" id=5]
antialiased = false
font_path = "res://art_assets/press-start.regular.ttf"

[sub_resource type="DynamicFont" id=6]
size = 19
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=4]
antialiased = false
font_path = "res://art_assets/press-start.regular.ttf"

[sub_resource type="DynamicFont" id=3]
size = 19
font_data = SubResource( 4 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.254902, 0.243137, 0.243137, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 89.0
margin_top = 113.0
margin_right = 263.0
margin_bottom = 239.0
custom_constants/separation = 22

[node name="PausedLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 174.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 8 )
text = "Paused"
align = 1

[node name="ResumeBtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 174.0
margin_bottom = 78.0
theme = SubResource( 1 )
custom_fonts/font = SubResource( 6 )
text = "Resume"

[node name="ReloadBtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 174.0
margin_bottom = 126.0
custom_fonts/font = SubResource( 3 )
text = "Reload"

[node name="PauseMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeBtn" to="." method="_on_ResumeBtn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ReloadBtn" to="." method="_on_ReloadBtn_pressed"]
